# slack-yoda

./: LICENSE  README.md  slack-yoda.cabal  stack.yaml
src/: Main.hs
