name:                slack-yoda
version:             0.1.0.0
synopsis:            Slack bot of Yoda
description:         Please see README.md
homepage:            https://github.com/ishiy1993/slack-dmenu#readme
license:             BSD3
license-file:        LICENSE
author:              ishiy
maintainer:          y.ishihara.1993@gmail.com
copyright:           Copyright: (c) 2016 ishiy
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable slack-yoda
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , req
